# watering-system

./: .gitignore  CMakeLists.txt  README.md  agend.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.s3
components/alarm_and_safety/: CMakeLists.txt  alarm_and_safety.c
components/api_server/: CMakeLists.txt  api_server.c
components/config_store/: CMakeLists.txt  config_store.c
components/history_store/: CMakeLists.txt  history_store.c
components/irrigation_model/: CMakeLists.txt  irrigation_model.c
components/moisture_manager/: CMakeLists.txt  moisture_manager.c
components/ota_update/: CMakeLists.txt  ota_update.c
components/pump_controller/: CMakeLists.txt  pump_controller.c
components/recommendation_engine/: CMakeLists.txt  recommendation_engine.c
components/reservoir_manager/: CMakeLists.txt  reservoir_manager.c
components/scheduler/: CMakeLists.txt  scheduler.c
components/status_display/: CMakeLists.txt  status_display.c
components/time_service/: CMakeLists.txt  time_service.c
components/user_observation_store/: CMakeLists.txt  user_observation_store.c
components/weather_manager/: CMakeLists.txt  weather_manager.c
components/wifi_provisioning/: CMakeLists.txt  (+1 more)
docs/: OTA_RUNBOOK.md  TEST_PLAN.md
esp32_cam_monitor/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c
test/: CMakeLists.txt  test_irrigation.c
tools/: build_s3.cmd  build_s3.ps1  build_s3_fast.cmd  build_s3_fast.ps1  idf.cmd  idf.ps1  live_settings_patch.json  ota_s3_fast.cmd  ota_s3_fast.ps1
(+24 files in other folders)
